<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".DetailActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_item_character"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/roundImageView"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/character_name"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_item_character"
        app:layout_constraintStart_toStartOf="@+id/img_item_character"
        app:layout_constraintTop_toBottomOf="@+id/img_item_character" />

    <TextView
        android:id="@+id/tv_item_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/character_category"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_item_name"
        app:layout_constraintStart_toStartOf="@+id/tv_item_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

    <TextView
        android:id="@+id/tv_item_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="12sp"
        android:text="@string/character_information"
        app:layout_constraintEnd_toEndOf="@+id/tv_item_category"
        app:layout_constraintStart_toStartOf="@+id/tv_item_category"
        app:layout_constraintTop_toBottomOf="@+id/action_share" />

    <Button
        android:id="@+id/action_share"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/share"
        android:textSize="14sp"
        app:icon="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="@+id/tv_item_category"
        app:layout_constraintStart_toStartOf="@+id/tv_item_category"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_category" />

</androidx.constraintlayout.widget.ConstraintLayout>